--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "localtunnel": "^2.0.2",
     "qrcode": "^1.5.4",
+    "selfsigned": "^5.5.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.8.3"
   }
